my-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: production
  name: production
spec:
  finalizers:
  - kubernetes
