expose-my.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-12-31T16:25:57Z"
  labels:
    app: proxy
  name: my-dep
  namespace: default
  resourceVersion: "14730"
  uid: 1fcb75fe-2acb-4222-ac76-689602948922
spec:
  clusterIP: 10.99.17.13
  clusterIPs:
  - 10.99.17.13
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: proxy
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
